# fantacalcio-asta

./: .gitignore  Dockerfile  Fantacalcio.pro  buyplayerdialog.cpp  buyplayerdialog.h  buyplayerdialog.ui  create_player_table.py  create_roster_table.py  create_team_table.py  create_transfer_table.py  db.py  docker-compose.yml  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h  player.cpp  player.h  pyproject.toml  qtablenumberitem.cpp  qtablenumberitem.h  sql_queries.md  team.cpp  team.h
cli/: commands.py  manager.py  requirements.txt  test_estimate.py  utils.py
dashboards/: Rosters-1659806630920.json
django_manager/auction/: admin.py  models.py
django_manager/auction/migrations/: 0001_initial.py  0002_transfer_cost.py  0003_alter_footballer_role.py  0004_alter_transfer_created_at_alter_transfer_seller.py  0005_alter_transfer_created_at.py  0006_alter_transfer_created_at.py  0007_alter_transfer_buyer_alter_transfer_created_at_and_more.py  0008_alter_transfer_created_at.py  0009_alter_transfer_created_at.py  0010_alter_transfer_created_at.py  0011_alter_transfer_created_at.py  0012_alter_transfer_created_at.py  0013_team_credits_alter_transfer_created_at.py  0014_footballer_external_id_alter_transfer_created_at.py  (+3 more)
django_manager/django_manager/: settings.py  urls.py
manager/: commands.py  estimate.py  test_estimate.py  utils.py
provisioning/dashboards/: Defenders.json  Forwards.json  Goalkeepers.json  Midfielders.json  RealPollo.json  Rosters-1659806630920.json  dashboard.yaml
provisioning/datasources/: datasource.yaml
