[tool.poetry]
name = "fantacalcio-asta"
version = "0.1.0"
description = "Manager of Fantacalcio auction"
authors = ["andregri <andrea.grillo96@live.com>"]
readme = "README.md"
packages = [{include = "fantacalcio_asta"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
